# cross-pile

./: .gitignore  Anchor.example.toml  README.md  package-lock.json  package.json
app/idl/: cross-pile-mod.json
programs/cross-pile/: Cargo.toml
programs/cross-pile/src/: lib.rs
tests/: cross-pile.ts
