[package]
name = "hypn-gameset"
version = "0.1.4"
description = "Based on cross-pile"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "hypn_gameset"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
solrandhypn = { version = "0.1.7", features = ["cpi"] }
